<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ip"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="192.168."
                android:textAlignment="center"
                android:id="@+id/ip_txt"
                android:imeOptions="flagNoExtractUi"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/port"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="7874"
                android:textAlignment="center"
                android:id="@+id/puerto_txt"
                android:imeOptions="flagNoExtractUi"/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/config"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/frecuencia"/>

            <EditText
                android:id="@+id/frec"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="20"
                android:inputType="number"
                android:textAlignment="center"
                android:imeOptions="flagNoExtractUi"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px">

            <CheckBox android:id="@+id/check_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:checked="false" />
        </TableRow>

        <TableRow
            android:id="@+id/table_media"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/num_media"/>

            <EditText
                android:id="@+id/tam"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="10"
                android:inputType="number"
                android:textAlignment="center"
                android:imeOptions="flagNoExtractUi"/>
        </TableRow>

    </TableLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20px">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/sumary_boto_con"
            android:id="@+id/guardarBtn"/>
    </RelativeLayout>

</LinearLayout>